--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -15,3 +15,9 @@
   padding: 10px;
   border-bottom: 1px solid lightgray;
 }
+
+@media (max-width: 1000px) {
+  .checkout {
+    flex-direction: column;
+  }
+}
