--- a/src/components/Checkout/CheckoutProduct/CheckoutProduct.css
+++ b/src/components/Checkout/CheckoutProduct/CheckoutProduct.css
@@ -29,3 +29,9 @@
   font-size: 17px;
   font-weight: 800;
 }
+
+@media (max-width: 688px) {
+  .checkoutProduct__title {
+    font-size: 14px;
+  }
+}
