--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,6 +33,7 @@
   display: flex;
   justify-content: space-evenly;
   flex: 1;
+  align-items: center;
 }
 
 .header__option {
@@ -65,4 +66,118 @@
 
 .header__basketCount {
   margin: 0 10px;
+}
+
+.menu__toggler {
+  display: none;
+}
+
+.header__navSmall {
+  display: none;
+}
+
+@media (max-width: 688px) {
+  .header__nav {
+    display: none;
+  }
+
+  .menu__toggler {
+    width: 60px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 10px;
+    position: relative;
+    border: 1px solid #fff;
+  }
+
+  .menu__toggler > span {
+    width: 90%;
+    height: 4px;
+    background-color: #fff;
+  }
+
+  .menu__toggler > span:nth-of-type(2) {
+    width: 90%;
+    height: 5px;
+    background-color: #fff;
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+    position: absolute;
+    transform: translateX(0);
+  }
+
+  .menu__toggler.open > span:nth-of-type(2) {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+
+  .menu__toggler > span:nth-of-type(1) {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    width: 90%;
+    transform: translateX(-50%);
+    height: 5px;
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+    background-color: #fff;
+  }
+
+  .menu__toggler.open > span:nth-of-type(1) {
+    transform: rotate(135deg);
+    left: 5px;
+    top: 21px;
+  }
+
+  .menu__toggler > span:nth-of-type(3) {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 5px;
+    border-radius: 8px;
+    background-color: #fff;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .menu__toggler.open > span:nth-of-type(3) {
+    transform: rotate(-135deg);
+    left: 5px;
+    bottom: 23px;
+  }
+
+  .header__navSmall {
+    position: absolute;
+    width: 50vw;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    background-color: #131921;
+    transform: translateX(110vw);
+    transition: all 0.5s ease-in-out;
+  }
+
+  .header__navSmall.active {
+    transform: translateX(0);
+  }
+
+  .header__navSmall > a {
+    text-decoration: none;
+  }
+
+  .header__optionLineOne {
+    font-size: 13px;
+  }
+
+  .header__optionLineTwo {
+    font-size: 16px;
+  }
 }
