--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,6 +5,10 @@
   max-width: 1500px;
 }
 
+.home__container {
+  width: 100%;
+}
+
 .home__row {
   display: flex;
   z-index: 1;
@@ -16,4 +20,10 @@
   z-index: -1;
   margin-bottom: -150px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+@media (max-width: 688px) {
+  .home__row {
+    flex-direction: column;
+  }
 }
